random commit first to save records

--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -18,8 +18,8 @@ section.section
   // These elements are displayed as white info cards in the middle of the screen
   .connected
     img#creatorImage(src='../images/unnamed.jpg')
-    .infoConnected
-      h2 Who are you?
+    .selectadmin
+      h2 Please select an person to serve you
       br
       form.loginForm
         input#yourName(type='text' placeholder='Your nick name')
@@ -27,45 +27,45 @@ section.section
         input#yourEmail(type='text' placeholder='Your email address')
         br
         input#yourEnter(type='submit' value='ENTER')
-  .personinside
-    img#ownerImage(src='../images/unnamed.jpg')
-    .infoInside
-      h2
-        | Chat with 
-        span.nickname-chat
-      br
-      form.loginForm
-        input#hisName(type='text' placeholder='Your nick name')
-        br
-        input#hisEmail(type='text' placeholder='Your email address')
-        br
-        input#hisEnter(type='submit' value='CHAT')
-  .invite-textfield
-    h2 Oops, there are no other people in this chat!
-    h5 Invite a friend by sending them this URL
-    .link
-      a#link(title='Invite a friend' href='')
-  .left
-    img#leftImage(src='../images/unnamed.jpg')
-    .info
-      h2
-        span.nickname-left
-        |  has left this chat.
-      h5 Invite somebody else by sending them this page.
-  .toomanypeople
-    h2 Oops, you can not join this chat!
-    h5
-      | There are already two people in it. Would you like to create a 
-      a#room(title='New Room' href='/create') new room
-      | ?
+  //- .personinside
+  //-   img#ownerImage(src='../images/unnamed.jpg')
+  //-   .infoInside
+  //-     h2
+  //-       | Chat with 
+  //-       span.nickname-chat
+  //-     br
+  //-     form.loginForm
+  //-       input#hisName(type='text' placeholder='Your nick name')
+  //-       br
+  //-       input#hisEmail(type='text' placeholder='Your email address')
+  //-       br
+  //-       input#hisEnter(type='submit' value='CHAT')
+  //- .invite-textfield
+  //-   h2 Oops, there are no other people in this chat!
+  //-   h5 Invite a friend by sending them this URL
+  //-   .link
+  //-     a#link(title='Invite a friend' href='')
+  //- .left
+  //-   img#leftImage(src='../images/unnamed.jpg')
+  //-   .info
+  //-     h2
+  //-       span.nickname-left
+  //-       |  has left this chat.
+  //-     h5 Invite somebody else by sending them this page.
+  //- .toomanypeople
+  //-   h2 Oops, you can not join this chat!
+  //-   h5
+  //-     | There are already two people in it. Would you like to create a 
+  //-     a#room(title='New Room' href='/create') new room
+  //-     | ?
   .nomessages
     img#noMessagesImage(src='../images/unnamed.jpg')
     .info
       h2
-        | You are chatting with 
+        | Please wait a while for our staff, we will be with you shortly
         span.nickname-chat
         | .
-      h5 Send them a message from the form below!
+      h5 keep the website open, we will remind you when an admin enters
   .chatscreen
     ul.chats
       // The chat messages will go here
