shuffled some files and re-arranged the image files into neat folders

--- a/views/archive/carousel.pug
+++ b/views/archive/carousel.pug
@@ -9,22 +9,22 @@ mixin carousel(title)
     // Wrapper for slides
     .carousel-inner(role='listbox')
       .item.active
-        img(src='images/slide6.jpg' alt='Chania' width='460' height='345')
+        img(src='images/carousel/slide6.jpg' alt='Chania' width='460' height='345')
         .carousel-caption
           h2 Welcome to Accenture's Page
           p Where potential meets passion
       .item
-        img(src='images/slide5.png' alt='Chania' width='460' height='345')
+        img(src='images/carousel/slide5.png' alt='Chania' width='460' height='345')
         .carousel-caption
           h2 Sign Up Now!
           a.btn.btn-outline-warning.btn-lg.btn-block(href='/users/signup' role='button') Sign Up now!
       .item
-        img(src='images/slide7.jpg' alt='Flower' width='460' height='345')
+        img(src='images/carousel/slide7.jpg' alt='Flower' width='460' height='345')
         .carousel-caption
           h3 Flowers
           p Beautiful flowers in Kolymbari, Crete.
       .item
-        img(src='images/slide8.jpg' alt='Flower' width='460' height='345')
+        img(src='images/carousel/slide8.jpg' alt='Flower' width='460' height='345')
         .carousel-caption
           h3 Flowers
           p Beautiful flowers in Kolymbari, Crete.
