--- a/views/consultant.pug
+++ b/views/consultant.pug
@@ -19,7 +19,7 @@ head
     u About Us:
   .row
     .col-sm-4
-      img(align='center' src='images/ChelzP.png' alt='Sorry image cannot be displayed.' width='200' height='250' style='display:block;')
+      img(align='center' src='/images/aboutConsultant/ChelzP.png' alt='Sorry image cannot be displayed.' width='200' height='250' style='display:block;')
       a(align='center')
         p(style='padding-right:150px')
           | Chelsea
@@ -53,7 +53,7 @@ head
 .container(style='margin-top:30px')
   .row
     .col-sm-4
-      img(align='center' src='images/PFPor.png' alt='Sorry image cannot be displayed.' width='200' height='270' style='display:block;')
+      img(align='center' src='/images/aboutConsultant/PFPor.png' alt='Sorry image cannot be displayed.' width='200' height='270' style='display:block;')
       a(align='center')
         p(style='padding-right:150px')
           | Peng Fei
