progress bar and carousell

--- a/views/ticket/ticket_form/basics.pug
+++ b/views/ticket/ticket_form/basics.pug
@@ -19,6 +19,9 @@ html(lang='en')
           .col-md-6.order-md-1.text-center.text-md-left.pr-md-5
             - let topics = ["Python", "C++", "Java", "Go", "Android Studio", "Javascript", "C"];
             br
+            .progress
+              .progress-bar.bg-warning.progress-bar-striped.progress-bar-animated(role='progressbar' style='width: 33.3%;' aria-valuenow='30' aria-valuemin='0' aria-valuemax='90') Step 1
+            br
             h1.display-8.m-b-2 Ticket Form
             br
             // register form
