--- a/views/ticket/ticket_form/solutions.pug
+++ b/views/ticket/ticket_form/solutions.pug
@@ -18,6 +18,9 @@ html(lang='en')
         .row.align-items-center
           .col-md-6.order-md-1.text-center.text-md-left.pr-md-5
             br
+            .progress
+              .progress-bar.bg-warning.progress-bar-striped.progress-bar-animated(role='progressbar' style='width: 66.7%;' aria-valuenow='60' aria-valuemin='0' aria-valuemax='90') Step 2
+            br
             h1.display-7.m-b-2 Solutions
             br 
             
