--- a/views/ticket/ticket_form/details.pug
+++ b/views/ticket/ticket_form/details.pug
@@ -10,6 +10,10 @@ html(lang='en')
         .row.align-items-center
           .col-md-8.order-md-1.text-center.text-md-left.pr-md-5
             - let topics = ["API Dev Ops", "Chat as a service", "recruitment Platform", "Aesop", "Travel market space", "Banking App", "AR car visualizer"];
+            br
+            .progress
+              .progress-bar.bg-warning.progress-bar-striped.progress-bar-animated(role='progressbar' style='width: 100%;' aria-valuenow='90' aria-valuemin='0' aria-valuemax='90') Step 3
+            br
             h1.display-7.m-b-2 Ticket Form
 
             // register form
