select admin page and roots

--- a/views/chat/room.pug
+++ b/views/chat/room.pug
@@ -20,7 +20,7 @@ section
     .node
       img#nodelogo(src='images/accenture.png' alt='nodelogo')
       h2#chat powered web chat
-    a#create(title='Create' href='/create')
+    a#create(title='Create' href='/select')
       #createbutton
         #little Create a Private
         #big CHAT ROOM!
