--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -45,13 +45,13 @@ section.section
   //-   h5 Invite a friend by sending them this URL
   //-   .link
   //-     a#link(title='Invite a friend' href='')
-  //- .left
-  //-   img#leftImage(src='../images/unnamed.jpg')
-  //-   .info
-  //-     h2
-  //-       span.nickname-left
-  //-       |  has left this chat.
-  //-     h5 Invite somebody else by sending them this page.
+  .left
+    img#leftImage(src='../images/unnamed.jpg')
+    .info
+      h2
+        span.nickname-left
+        |  has left this chat.
+      h5 Invite somebody else by sending them this page.
   //- .toomanypeople
   //-   h2 Oops, you can not join this chat!
   //-   h5
