--- a/views/chat/select.pug
+++ b/views/chat/select.pug
@@ -6,7 +6,6 @@ doctype html
 head
   title Private chat room | Demo
   link(type='text/css' rel='stylesheet' href='../stylesheets/stylesheet.css')
-  //- link(type='text/css' rel='stylesheet' href='/public/stylesheets/style.css')
   link(href='http://fonts.googleapis.com/css?family=Open+Sans Condensed:300italic,300,700' rel='stylesheet' type='text/css')
 header.banner
   h1.bannertext
@@ -16,23 +15,22 @@ header.banner
       |  REAL TIME CHAT
 section.section
   // These elements are displayed as white info cards in the middle of the screen
-  .connected
-    img#creatorImage(src='../images/unnamed.jpg')
-    .selectadmin
-      h2 Please select an person to serve you
-      br
-      for user in users:
-        if user.isadmin:
-            a(href='www.something.com')
-                img(src='my/machine')
-  .nomessages
-    img#noMessagesImage(src='../images/unnamed.jpg')
-    .info
-      h2
-        | Please wait a while for our staff, we will be with you shortly
-        span.nickname-chat
-        | .
-      h5 keep the website open, we will remind you when an admin enters
+  //- img#creatorImage(src='../images/unnamed.jpg')
+  .selectadmin
+    h2 Please select an person to serve you
+    br
+    |
+    for user in users
+      a(href='/chat/' + user.id)
+        img(src='../images/unnamed.jpg')
+  //- .nomessages
+  //-   img#noMessagesImage(src='../images/unnamed.jpg')
+  //-   .info
+  //-     h2
+  //-       | Please wait a while for our staff, we will be with you shortly
+  //-       span.nickname-chat
+  //-       | .
+  //-     h5 keep the website open, we will remind you when an admin enters
   footer
 //- footer
 script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js')
