--- a/views/ticket/admin_1.pug
+++ b/views/ticket/admin_1.pug
@@ -32,21 +32,38 @@ html(lang='en')
               tr
               tbody
               for ticket in tickets
-                tr(id=ticket.ticketId)
-                  td
-                    span #{count++}
-                  td
-                    span #{ticket.user.firstName + " " + ticket.user.lastName}
-                  td
-                    span #{ticket.user.email}
-                  td
-                    span #{ticket.user.phoneNumber}
-                  td
-                    span #{ticket.topic}  
-                  td
-                    span#desc!=ticket.messages[0].content
-                  td
-                    a(href="/ticket/" + user.userId + "/" + ticket.ticketId + "/respond") Respond
+                if ticket.priority
+                  tr#ticket_priority(id=ticket.ticketId)
+                    td
+                      span #{count++}
+                    td
+                      span #{ticket.user.firstName + " " + ticket.user.lastName}
+                    td
+                      span #{ticket.user.email}
+                    td
+                      span #{ticket.user.phoneNumber}
+                    td
+                      span #{ticket.topic}  
+                    td
+                      span#desc!=ticket.messages[0].content
+                    td
+                      a(href="/ticket/" + user.userId + "/" + ticket.ticketId + "/respond") Respond
+                else
+                  tr#ticket(id=ticket.ticketId)
+                    td
+                      span #{count++}
+                    td
+                      span #{ticket.user.firstName + " " + ticket.user.lastName}
+                    td
+                      span #{ticket.user.email}
+                    td
+                      span #{ticket.user.phoneNumber}
+                    td
+                      span #{ticket.topic}  
+                    td
+                      span#desc!=ticket.messages[0].content
+                    td
+                      a(href="/ticket/" + user.userId + "/" + ticket.ticketId + "/respond") Respond
                   
 
 
