--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -8,19 +8,19 @@ mixin navbar(user)
         ul.navbar-nav.mr-auto
           li.nav-item
             a#btn_home.nav-link(href="/" data-toggle="tooltip" data-placement="bottom" title="Home Page") 
-              img(src='http://' + hostDomain + '/images/navbar/homewhite.png', width="30", height="30" style="padding: 0 0 0 0")
+              img(src='/images/navbar/homewhite.png', width="30", height="30" style="padding: 0 0 0 0")
           li.nav-item
             a#btn_tickets.nav-link(href="/tickets" data-toggle="tooltip" data-placement="bottom" title="Your Tickets") 
-              img(src='http://' + hostDomain + '/images/navbar/bookwhite.png', width="30", height="30")
+              img(src='/images/navbar/bookwhite.png', width="30", height="30")
           li.nav-item
             a#btn_ticket-form.nav-link(href="/ticket_form/basics" data-toggle="tooltip" data-placement="bottom" title="Questions") 
-              img(src='http://' + hostDomain + '/images/navbar/helpwhite.png', width="30", height="30")
+              img(src='/images/navbar/helpwhite.png', width="30", height="30")
           li.nav-item
             a#btn_chat.nav-link(href='/room' target="_blank" ata-toggle="tooltip" data-placement="bottom" title="Chat with Admin now!") 
-              img(src='http://' + hostDomain + '/images/navbar/chatwhite.png', width="30", height="30")
+              img(src='/images/navbar/chatwhite.png', width="30", height="30")
           li.nav-item
             a#btn_consultant.nav-link(href='/consultant' data-toggle="tooltip" data-placement="bottom" title="Meet The Consultants") 
-              img(src='http://' + hostDomain + '/images/navbar/consultantwhite.png', width="30", height="30")
+              img(src='/images/navbar/consultantwhite.png', width="30", height="30")
       
       .navbar-right
         if user
