--- a/views/ticket/user_2.pug
+++ b/views/ticket/user_2.pug
@@ -31,19 +31,34 @@ html(lang='en')
               tbody
               if tickets != NULL
                 for ticket in tickets
-                  tr(id=ticket.id)
-                    td
-                      span #{count++}
-                    td
-                      span #{ticket.topic}  
-                    td
-                      span #{ticket.description}
-                    td
-                      span#desc!=ticket.messages[0].content
-                    td
-                      a(href="/my_tickets/" + user.userId + '/' + ticket.ticketId) Edit
-                    td
-                      button(onclick=`deleteticket('${ticket.id}')`).btn.btn-primary Delete
+                  if ticket.priority
+                    tr#ticket_priority(id=ticket.id)
+                      td
+                        span #{count++}
+                      td
+                        span #{ticket.topic}  
+                      td
+                        span #{ticket.description}
+                      td
+                        span#desc!=ticket.messages[0].content
+                      td
+                        a(href="/my_tickets/" + user.userId + '/' + ticket.ticketId) Edit
+                      td
+                        button(onclick=`deleteticket('${ticket.id}')`).btn.btn-primary Delete
+                  else
+                    tr#ticket(id=ticket.id)
+                      td
+                        span #{count++}
+                      td
+                        span #{ticket.topic}  
+                      td
+                        span #{ticket.description}
+                      td
+                        span#desc!=ticket.messages[0].content
+                      td
+                        a(href="/my_tickets/" + user.userId + '/' + ticket.ticketId) Edit
+                      td
+                        button(onclick=`deleteticket('${ticket.id}')`).btn.btn-primary Delete
                   
 
 
