insert html to pug

--- a/views/ticket/ticket_form/solution_detail.pug
+++ b/views/ticket/ticket_form/solution_detail.pug
@@ -10,10 +10,11 @@ html(lang='en')
         .row.align-items-center
           .col-md-10.order-md-1.text-center.text-md-left
             h1 Question
-            p #{question}
+            | !{question}
             | 
             h2 Answers
-            p #{answer}
+            | !{answer}
+
                   
 
 
