--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -6,6 +6,7 @@ html(lang='en')
 		header
 		include ../common/navbar.pug
 		+navbar(user)
+		br
 		.container
 			.row
 				.col-sm-12.offset-md-2.col-md-8
@@ -19,11 +20,11 @@ html(lang='en')
 										input(placeholder='Enter your email',required=true, name='email',type='email',value=formData.email).form-control
 										label.small.mb-1.mt-3 Password:
 										input(placeholder='Enter your password',required=true, name='password', type='password',value='').form-control
-										button.mt-3.btn.btn-primary(type='submit') Log in
+										button.mt-3.btn.btn-warning(type='submit') Log in
 										p.mt-2.mb-0
-											| Forgot your password? #[a(href="#") Reset here].
+											| Forgot your password? #[a(href="#" class="text-warning") Reset here].
 										p.m-0
-											| Don't have an account? #[a(href="/users/signup") Sign up here].
+											| Don't have an account? #[a(href="/users/signup" class="text-warning") Sign up here].
 		include ../common/footer.pug
 		+footer()
 		//- script(src="/javascripts/leads.js")
